修复了lint性能检测中发现的若干问题